Day 4: add navigation, CSS&JS modules and webpack

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="src/css/style.css">
+		<link rel="stylesheet" href="dist/main.css">
 		<title>Сайт-портфолио</title>
 	</head>
 	<body>
 		<header class="header">
 			<div class="content-container is-desktop">
 				<nav class="header__wrapper">
-					<a class="header__link is-animated is-active" href="">Home</a>
-					<a class="header__link is-animated" href="">About me</a>
-					<a class="header__link is-animated" href="">Skills</a>
-					<a class="header__link is-animated" href="">Portfolio</a>
-					<a class="header__link is-animated" href="">Contacts</a>
+					<div class="header__link is-animated is-active" data-target="main">Home</div>
+					<div class="header__link is-animated" data-target="about">About me</div>
+					<div class="header__link is-animated" data-target="skills">Skills</div>
+					<div class="header__link is-animated" data-target="portfolio">Portfolio</div>
+					<div class="header__link is-animated" data-target="contacts">Contacts</div>
 				</nav>
 			</div>
 		</header>
 		<main>
-			<section class="section__main">
+			<section class="section__main" id="section-main">
 				<div class="content-container">
 					<div class="section__main-wrapper">
 						<h1 class="section__main-title">Denis <br/>Novik</h1>
@@ -29,8 +29,9 @@
 						</div>
 						<div class="menu__button icon-menu is-mobile"></div>
 					</div>
-					<img class="is-desktop" src="src/img/header.jpg" alt="Denis Novik UX | UI designer from Minsk" />
-					<img class="is-mobile" src="src/img/header-xs.jpg" alt="Denis Novik UX | UI designer from Minsk" />
+					<img class="section__main-img is-desktop" src="src/img/header.jpg" alt="Denis Novik UX | UI designer from Minsk" />
+					<img class="section__main-img is-tablet" src="src/img/header-m.jpg" alt="Denis Novik UX | UI designer from Minsk" />
+					<img class="section__main-img is-xs" src="src/img/header-xs.jpg" alt="Denis Novik UX | UI designer from Minsk" />
 					<div class="menu__mobile is-mobile is-animated">
 						<div class="menu__mobile-wrapper">
 							<a class="menu__mobile-link is-animated is-active" href="">Home</a>
@@ -46,7 +47,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="section__about is-grey">
+			<section class="section__about is-grey" id="section-about">
 				<div class="content-container">
 					<h2>About me</h2>
 					<div class="section__about-text">
@@ -56,7 +57,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="section__skills">
+			<section class="section__skills" id="section-skills">
 				<div class="content-container">
 					<h2>Skills</h2>
 					<p>I work in such programs as</p>
@@ -108,7 +109,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="is-grey section__portfolio">
+			<section class="is-grey section__portfolio" id="section-portfolio">
 				<div class="content-container">
 					<h2>Portfolio</h2>
 					<div class="section__portfolio-item">
@@ -126,7 +127,7 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer">
+		<footer class="footer" id="section-contacts">
 			<div class="content-container">
 				<h2 class="footer__title">Contacts</h2>
 				<p>Want to know more or just chat? <br/>You are welcome!</p>
@@ -142,7 +143,7 @@
 		</footer>
 		<div class="modal__form is-animated">
 			<div class="modal__form-wrapper is-animated">
-				<form action="#">
+				<form class="modal__form-form" action="#">
 					<input type="text" placeholder="Your name *" required />
 					<input type="email" placeholder="Your email *" required />
 					<input type="text" placeholder="Company" />
@@ -152,6 +153,6 @@
 				<div class="modal__form-close icon-close"></div>
 			</div>
 		</div>
-		<script src="src/js/script.js"></script>
+		<script src="dist/main.js"></script>
 	</body>
 </html>
