--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	</head>
 	<body>
 		<header class="header">
-			<div class="content-container">
+			<div class="content-container is-desktop">
 				<nav class="header__nav">
-					<a href="" class="header__nav-item is-active">Home</a>
-					<a href="" class="header__nav-item">About me</a>
-					<a href="" class="header__nav-item">Skills</a>
-					<a href="" class="header__nav-item">Portfolio</a>
-					<a href="" class="header__nav-item">Contacts</a>
+					<a href="" class="header__nav-item is-animated is-active">Home</a>
+					<a href="" class="header__nav-item is-animated">About me</a>
+					<a href="" class="header__nav-item is-animated">Skills</a>
+					<a href="" class="header__nav-item is-animated">Portfolio</a>
+					<a href="" class="header__nav-item is-animated">Contacts</a>
 				</nav>
 			</div>
 		</header>
@@ -24,11 +24,29 @@
 					<div class="section-main__wrapper">
 						<h1 class="section-main__wrapper-title">Denis <br/>Novik</h1>
 						<p class="section-main__wrapper-subtitle">UX | UI designer <br/>24 years old, Minsk</p>
-						<div class="section-main__wrapper-lang">
-							<a href="">RU</a> | <span>ENG</span>
+						<div class="section-main__wrapper-lang is-desktop">
+							<a class="is-animated" href="">RU</a> | <span>ENG</span>
 						</div>
 					</div>
-					<img src="src/img/header.jpg" alt="Denis Novik UX | UI designer" />
+					<img class="section-main__img is-desktop" src="src/img/header.jpg" alt="Denis Novik UX | UI designer" />
+					<img class="section-main__img is-tablet" src="src/img/header-m.jpg" alt="Denis Novik UX | UI designer" />
+					<img class="section-main__img is-mobile" src="src/img/header-xs.jpg" alt="Denis Novik UX | UI designer" />
+					<button class="mobile-menu__button icon-menu is-mobile"></button>
+					<div class="mobile-menu is-mobile is-animated">
+						<div class="content-container">
+							<div class="mobile-menu__close icon-close"></div>
+							<nav class="mobile-menu__nav">
+								<a href="" class="mobile-menu__nav-item is-animated is-active">Home</a>
+								<a href="" class="mobile-menu__nav-item is-animated">About me</a>
+								<a href="" class="mobile-menu__nav-item is-animated">Skills</a>
+								<a href="" class="mobile-menu__nav-item is-animated">Portfolio</a>
+								<a href="" class="mobile-menu__nav-item is-animated">Contacts</a>
+							</nav>
+							<div class="mobile-menu__lang">
+								<a href="">RU</a> | <span>ENG</span>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<section class="section-about is-grey">
@@ -115,15 +133,28 @@
 			<div class="content-container">
 				<h2 class="footer__title">Contacts</h2>
 				<p>Want to know more or just chat? <br/>You are welcome!</p>
-				<button class="footer__button">Send message</button>
+				<button class="footer__button is-animated">Send message</button>
 				<div class="footer__socials">
-					<a class="footer__socials-link icon-linkedin" href="" target="_blank" rel="nofollow"></a>
-					<a class="footer__socials-link icon-instagram" href="" target="_blank" rel="nofollow"></a>
-					<a class="footer__socials-link icon-behance" href="" target="_blank" rel="nofollow"></a>
-					<a class="footer__socials-link icon-dribble" href="" target="_blank" rel="nofollow"></a>
+					<a class="footer__socials-link is-animated icon-linkedin" href="" target="_blank" rel="nofollow"></a>
+					<a class="footer__socials-link is-animated icon-instagram" href="" target="_blank" rel="nofollow"></a>
+					<a class="footer__socials-link is-animated icon-behance" href="" target="_blank" rel="nofollow"></a>
+					<a class="footer__socials-link is-animated icon-dribble" href="" target="_blank" rel="nofollow"></a>
 				</div>
 				<div class="footer__copy">Like me on <br/>LinkedIn, Instagram, Behance, Dribble</div>
 			</div>
 		</footer>
+		<div class="modal__overlay">
+			<div class="modal__wrapper">
+				<form action="#" class="modal__wrapper-form">
+					<input type="text" placeholder="Name*" required />
+					<input type="email" placeholder="E-mail*" required />
+					<input type="text" placeholder="Company" />
+					<textarea required></textarea>
+					<input class="modal__wrapper-form-send" type="submit" value="Send" />
+				</form>
+				<div class="modal__close is-animated icon-close"></div>
+			</div>
+		</div>
+		<script src="src/js/script.js"></script>
 	</body>
 </html>
